workshop04/minio-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc-headless
  namespace: minio-ns
spec:
  clusterIP: None
  selector:
    app: minio
    name: minio-po
  ports:
  - name: server
    port: 9000
    targetPort: 9000
  - name: web-console
    port: 9090
    targetPort: 9090
